[package]
name = "murmur"
version = "0.3.2"
edition = "2021"
license = "MIT"
description = "This library provides a simple and flexible way to format colored messages with optional `NerdFonts` or `Unicode` icons."
repository = "https://github.com/andretcarpizo/murmur"
documentation = "https://docs.rs/murmur"
readme = "README.md"
keywords = ["terminal", "color", "formatting", "icons","nerdfonts"]
categories = ["command-line-utilities"]

[dependencies]
color-backtrace = "0.6.1"
enum-iterator = "1.4.1"
once_cell = "1.19.0"
owo-colors = "3.5.0"
thiserror = "1.0.51"

[dev-dependencies]
color-eyre = "0.6.2"
color-backtrace = "0.6.1"


[features]
default = []

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
missing_docs_in_private_items = "deny"
cargo = "warn"
complexity = "warn"
correctness = "warn"
nursery = "warn"
pedantic = "warn"
perf = "warn"
style = "warn"
suspicious = "warn"
#restriction = "warn" #don't do it!
non_ascii_literal = "warn"
shadow_reuse = "allow"
missing_inline_in_public_items = "allow"
single_call_fn = "allow"
implicit_return = "allow"
missing_const_for_fn = "allow"
exhaustive_enums = "allow"
pub_use = "allow"
question_mark = "allow"



